// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisRows /> renders correctly 1`] = `
<Fragment>
  <TaskArgsRow
    title="Sample"
  >
    <Link
      to="/samples/bar"
    >
      bar
    </Link>
  </TaskArgsRow>
  <TaskArgsRow
    title="Analysis"
  >
    <Link
      to="/samples/bar/analyses/foo"
    >
      foo
    </Link>
  </TaskArgsRow>
</Fragment>
`;

exports[`<BuildIndexRows /> renders correctly 1`] = `
<Fragment>
  <TaskArgsRow
    title="Reference"
  >
    <Link
      to="/refs/foo"
    >
      foo
    </Link>
  </TaskArgsRow>
  <TaskArgsRow
    title="Index"
  >
    <Link
      to="/refs/foo/indexes/bar"
    >
      bar
    </Link>
  </TaskArgsRow>
</Fragment>
`;

exports[`<CreateSampleRows /> renders correctly 1`] = `
<Fragment>
  <TaskArgsRow
    title="Sample"
  >
    <Link
      to="/samples/foo"
    >
      foo
    </Link>
  </TaskArgsRow>
</Fragment>
`;

exports[`<CreateSubtractionRows /> renders correctly 1`] = `
<TaskArgsRow
  title="Subtraction"
>
  <Link
    to="/subtraction/foo"
  >
    foo
  </Link>
</TaskArgsRow>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "aodp" 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "build_index" 1`] = `
<BuildIndexRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "create_sample" 1`] = `
<CreateSampleRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "create_subtraction" 1`] = `
<CreateSubtractionRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "nuvs" 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "pathoscope_bowtie" 1`] = `
<AnalysisRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<TaskArgs /> renders <TaskArgsRows /> correctly when task type is "update_sample" 1`] = `
<UpdateSampleRows
  analysis_id="test-analysis"
  sample_id="123abc"
/>
`;

exports[`<UpdateSampleRows /> renders correctly 1`] = `
<TaskArgsRow
  title="Subtraction"
>
  <Link
    to="/samples/foo"
  >
    foo
  </Link>
</TaskArgsRow>
`;
